--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ out/
 *.iws
 *.MF
 
+# Gradle
+.gradletasknamecache
+gradle-app.setting
+!gradle-wrapper.jar
+build/
+out/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
