--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.jooq:jooq-codegen:3.11.5'
     implementation 'mysql:mysql-connector-java:8.0.12'
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
 }
 
 jooq {
