--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.jooq:jooq-codegen:3.11.5'
     implementation 'mysql:mysql-connector-java:8.0.12'
     implementation 'org.apache.httpcomponents:httpclient:4.5.6'
+    implementation 'org.projectlombok:lombok:1.18.2'
+    implementation 'org.json:json:20180813'
 }
 
 jooq {
