started on login and setting html

--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -78,5 +78,10 @@ tasks.withType(Test) {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        excludeTags 'slow'
+        includeEngines 'junit-jupiter', 'junit-vintage'
+    }
+
+    failFast = false
 }
