added sending mails, 2 part registration, modified database

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -18,3 +18,11 @@ server.ssl.keyAlias: tomcat
 
 #spring.security.user.password=user
 
+#SMTP EMAIL
+spring.mail.host=smtp.mailtrap.io
+spring.mail.username=5ee15a5838efcd
+spring.mail.password=f6c647952a75c7
+spring.mail.port=2525
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
