finished besprechung hinzufügen

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -14,9 +14,8 @@ server.ssl.key-store-password: mypassword
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
 
-#spring.mvc.view.suffix = .jsp
-
-#spring.security.user.password=user
+#Logging
+#logging.level.org.jooq=DEBUG
 
 #SMTP EMAIL
 spring.mail.host=smtp.mailtrap.io
