cleaned up project. checked for restfull errors

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -22,6 +22,11 @@ spring.mail.host=smtp.mailtrap.io
 spring.mail.username=5ee15a5838efcd
 spring.mail.password=f6c647952a75c7
 spring.mail.port=2525
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.port=587
+
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
