--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Database Configuration
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.2.119:3306/meetnow
-spring.datasource.username=mupu
-spring.datasource.password=mupu
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/meetnow?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 
 #jOOQ Configuration
 spring.jooq.sql-dialect=mysql
